build for debian bullseye

--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -21,6 +21,8 @@ jobs:
         os: 
           - distro: debian
             release: buster
+          - distro: debian
+            release: bullseye
           - distro: ubuntu
             release: bionic
           - distro: ubuntu
