--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: horizon-eda
+Source: horizon-eda-upstream
 Section: electronics
 Priority: optional
 Maintainer: Lukas K <lukas@horizon-eda.org>
@@ -27,9 +27,10 @@ Standards-Version: 4.4.0
 Homepage: https://horizon-eda.org/
 Rules-requires-root: no
 
-Package: horizon-eda
+Package: horizon-eda-upstream
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Conflicts: horizon-eda
 Description: EDA layout and schematic application
  Horizon is an Electronic Design Automation (EDA) tool for circuit
  board design. It manages the full design flow from schematic entry
