get distro id from API
also add ubuntu hirsute

--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -21,19 +21,16 @@ jobs:
         os: 
           - distro: debian
             release: buster
-            id: 150
           - distro: debian
             release: bullseye
-            id: 207
           - distro: ubuntu
             release: bionic
-            id: 190
           - distro: ubuntu
             release: focal
-            id: 210
           - distro: ubuntu
             release: groovy
-            id: 219
+          - distro: ubuntu
+            release: hirsute
     runs-on: ubuntu-latest
     container: ${{ matrix.os.distro }}:${{ matrix.os.release }}
     steps:
@@ -45,13 +42,18 @@ jobs:
     - name: install dependencies
       run: apt-get install -y git build-essential libsqlite3-dev util-linux librsvg2-dev libcairomm-1.0-dev libepoxy-dev libgtkmm-3.0-dev uuid-dev libboost-dev  libzmq5 libzmq3-dev libglm-dev libgit2-dev libcurl4-gnutls-dev liboce-ocaf-dev libpodofo-dev python3 libzip-dev git libdxflib-dev
     - name: install build utils
-      run: apt-get install -y devscripts build-essential lintian wget debhelper curl
+      run: apt-get install -y devscripts build-essential lintian wget debhelper curl jq
     - name: fix locale on bionic
       if: ${{ matrix.os.release == 'bionic' }}
       run: |
         apt-get install locales
         locale-gen ${{ env.LANG }}
-
+    - name: get distro id
+      run: |
+        curl https://${{ secrets.PACKAGECLOUD_API_TOKEN }}:@packagecloud.io/api/v1/distributions.json | \
+        jq -r '"DISTRO_ID=" + (.deb[] | select(.index_name == "${{ matrix.os.distro }}")  | .versions[] | select(.index_name == "${{ matrix.os.release }}") | .id | tostring)' | \
+        tee -a $GITHUB_ENV
+        
     - uses: actions/checkout@v2
     - name: download tarball
       run: wget https://github.com/horizon-eda/horizon/archive/v${HORIZON_VERSION}.tar.gz -O horizon-eda-upstream_${HORIZON_VERSION}.orig.tar.gz
@@ -84,5 +86,5 @@ jobs:
     - name: Push to packagecloud
       if: ${{ github.ref == 'refs/heads/master' }}
       run: |
-        curl -X POST https://${{ secrets.PACKAGECLOUD_API_TOKEN }}:@packagecloud.io/api/v1//repos/horizon-eda/horizon-eda/packages.json  -F "package[distro_version_id]=${{ matrix.os.id }}"  -F "package[package_file]=@horizon-eda-upstream_${{ env.HORIZON_VERSION }}-${{ env.HORIZON_PKG_VERSION }}_amd64.deb"
-#        curl -X POST https://${{ secrets.PACKAGECLOUD_API_TOKEN }}:@packagecloud.io/api/v1//repos/horizon-eda/horizon-eda/packages.json  -F "package[distro_version_id]=${{ matrix.os.id }}"  -F "package[package_file]=@$(echo horizon-eda-upstream-dbgsym_${{ env.HORIZON_VERSION }}-${{ env.HORIZON_PKG_VERSION }}_amd64.*deb)"
+        curl -X POST https://${{ secrets.PACKAGECLOUD_API_TOKEN }}:@packagecloud.io/api/v1//repos/horizon-eda/horizon-eda/packages.json  -F "package[distro_version_id]=${{ env.DISTRO_ID }}"  -F "package[package_file]=@horizon-eda-upstream_${{ env.HORIZON_VERSION }}-${{ env.HORIZON_PKG_VERSION }}_amd64.deb"
+#        curl -X POST https://${{ secrets.PACKAGECLOUD_API_TOKEN }}:@packagecloud.io/api/v1//repos/horizon-eda/horizon-eda/packages.json  -F "package[distro_version_id]=${{ env.DISTRO_ID }}"  -F "package[package_file]=@$(echo horizon-eda-upstream-dbgsym_${{ env.HORIZON_VERSION }}-${{ env.HORIZON_PKG_VERSION }}_amd64.*deb)"
