--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -39,15 +39,14 @@ jobs:
       run: echo "Building tag ${{ github.ref }}"
     - name: update apt cache
       run: apt-get update
+    - name: generate locales
+      run: |
+        apt-get install -y locales
+        locale-gen ${{ env.LANG }}
     - name: install dependencies
       run: apt-get install -y git build-essential libsqlite3-dev util-linux librsvg2-dev libcairomm-1.0-dev libepoxy-dev libgtkmm-3.0-dev uuid-dev libboost-dev  libzmq5 libzmq3-dev libglm-dev libgit2-dev libcurl4-gnutls-dev liboce-ocaf-dev libpodofo-dev python3 libzip-dev git libdxflib-dev
     - name: install build utils
       run: apt-get install -y devscripts build-essential lintian wget debhelper curl jq
-    - name: fix locale on bionic
-      if: ${{ matrix.os.release == 'bionic' }}
-      run: |
-        apt-get install locales
-        locale-gen ${{ env.LANG }}
     - name: get distro id
       run: |
         curl https://${{ secrets.PACKAGECLOUD_API_TOKEN }}:@packagecloud.io/api/v1/distributions.json | \
