--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -8,7 +8,7 @@ on:
     branches: [ master ]
 
 env:
-  HORIZON_VERSION: 1.4.0
+  HORIZON_VERSION: 2.0.0
   HORIZON_PKG_VERSION: 1
   DEBIAN_FRONTEND: noninteractive
   LANG: en_US.UTF-8
@@ -47,6 +47,9 @@ jobs:
       run: apt-get install -y git build-essential libsqlite3-dev util-linux librsvg2-dev libcairomm-1.0-dev libepoxy-dev libgtkmm-3.0-dev uuid-dev libboost-dev  libzmq5 libzmq3-dev libglm-dev libgit2-dev libcurl4-gnutls-dev liboce-ocaf-dev libpodofo-dev python3 libzip-dev git libdxflib-dev
     - name: install build utils
       run: apt-get install -y devscripts build-essential lintian wget debhelper curl jq
+    - name: install gcc 8
+      if: ${{ matrix.os.release == 'bionic' }}
+      run: apt-get install -y g++-8
     - name: get distro id
       run: |
         curl https://${{ secrets.PACKAGECLOUD_API_TOKEN }}:@packagecloud.io/api/v1/distributions.json | \
@@ -62,6 +65,12 @@ jobs:
         tar xzf horizon-eda-upstream_${HORIZON_VERSION}.orig.tar.gz
         mv horizon-${HORIZON_VERSION} horizon-eda-upstream-${HORIZON_VERSION}
         cp -r debian horizon-eda-upstream-${HORIZON_VERSION}
+
+    - name: patch debian/rules to use gcc 8
+      if: ${{ matrix.os.release == 'bionic' }}
+      run: |
+        sed -i '/export CC/s/#//g' horizon-eda-upstream-${HORIZON_VERSION}/debian/rules
+        sed -i '/export CXX/s/#//g' horizon-eda-upstream-${HORIZON_VERSION}/debian/rules
 
     - name: run debuild
       run: debuild -uc -us
