--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -12,6 +12,8 @@ env:
   HORIZON_PKG_VERSION: 1
   DEBIAN_FRONTEND: noninteractive
   LANG: en_US.UTF-8
+  LANGUAGE: en_US.UTF-8
+  LC_ALL: en_US.UTF-8
 
 jobs:
   build:
@@ -42,7 +44,8 @@ jobs:
     - name: generate locales
       run: |
         apt-get install -y locales
-        locale-gen ${{ env.LANG }}
+        echo "${{ env.LANG }} UTF-8" > /etc/locale.gen
+        locale-gen
     - name: install dependencies
       run: apt-get install -y git build-essential libsqlite3-dev util-linux librsvg2-dev libcairomm-1.0-dev libepoxy-dev libgtkmm-3.0-dev uuid-dev libboost-dev  libzmq5 libzmq3-dev libglm-dev libgit2-dev libcurl4-gnutls-dev liboce-ocaf-dev libpodofo-dev python3 libzip-dev git libdxflib-dev
     - name: install build utils
