--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,8 @@ Build-Depends: debhelper (>= 10),
                python3,
                librsvg2-dev,
                libsqlite3-dev,
-               libzip-dev,
+               libarchive-dev,
+               libspnav-dev,
                libzmq3-dev,
                libzmq5,
                util-linux (>= 2.29),
