--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,8 @@ export DH_VERBOSE = 1
 # package maintainers to append LDFLAGS
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 export PREFIX=/usr
+export WITH_SPNAV=1
+
 
 #export CXX=g++-8
 #export CC=gcc-8
