--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -33,6 +33,8 @@ jobs:
             release: hirsute
           - distro: ubuntu
             release: impish
+          - distro: ubuntu
+            release: jammy
     runs-on: ubuntu-latest
     container: ${{ matrix.os.distro }}:${{ matrix.os.release }}
     steps:
