--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -22,19 +22,19 @@ jobs:
       matrix:
         os: 
           - distro: debian
+            release: buster
+          - distro: debian
             release: bullseye
-#          - distro: debian
-#            release: bullseye
-#          - distro: ubuntu
-#            release: bionic
-#          - distro: ubuntu
-#            release: focal
-#          - distro: ubuntu
-#            release: hirsute
-#          - distro: ubuntu
-#            release: impish
-#          - distro: ubuntu
-#            release: jammy
+          - distro: ubuntu
+            release: bionic
+          - distro: ubuntu
+            release: focal
+          - distro: ubuntu
+            release: hirsute
+          - distro: ubuntu
+            release: impish
+          - distro: ubuntu
+            release: jammy
     runs-on: ubuntu-latest
     container: ${{ matrix.os.distro }}:${{ matrix.os.release }}
     steps:
@@ -50,19 +50,11 @@ jobs:
         echo "${{ env.LANG }} UTF-8" > /etc/locale.gen
         locale-gen
     - name: install build utils
-      run: apt-get install -y devscripts build-essential lintian wget debhelper curl jq reprepro gnupg wget rsync
+      run: apt-get install -y devscripts build-essential lintian wget debhelper curl jq reprepro gnupg rsync
     - name: import gpg key
       run: |
         echo "${{ secrets.GPG_KEY}}" | gpg --import
         gpg --list-keys
-    - name: create repo
-      run: |
-        wget https://mirror.selfnet.de/horizon-eda/horizon-eda-upstream_2.3.0-1_amd64.deb
-        sed -i 's/Codename:.*/Codename: ${{ matrix.os.release }}/' repo/conf/distributions
-        cd repo
-        reprepro includedeb bullseye ../horizon-eda-upstream_2.3.0-1_amd64.deb
-        find
-        RSYNC_PASSWORD=${{ secrets.RSYNC_PASSWORD }} rsync -avz --stats --exclude=db --exclude=conf --delete-after ./  rsync://horizon-eda@mirror-1.server.selfnet.de/horizon-eda/${{ matrix.os.distro }}-${{ matrix.os.release }}/
     - name: install dependencies
       run: apt-get install -y git build-essential libsqlite3-dev util-linux librsvg2-dev libcairomm-1.0-dev libepoxy-dev libgtkmm-3.0-dev uuid-dev libboost-dev  libzmq5 libzmq3-dev libglm-dev libgit2-dev libcurl4-gnutls-dev liboce-ocaf-dev libpodofo-dev python3 libarchive-dev libspnav-dev git libdxflib-dev
     - name: install gcc 8
@@ -102,8 +94,10 @@ jobs:
           *.dsc
           *.debian.tar.*
           *.orig.tar.*
-    - name: Push to packagecloud
-      if: ${{ github.ref == 'refs/heads/master' }}
+    - name: create repo and push to selfnet mirror
       run: |
-        curl -X POST https://${{ secrets.PACKAGECLOUD_API_TOKEN }}:@packagecloud.io/api/v1//repos/horizon-eda/horizon-eda/packages.json  -F "package[distro_version_id]=${{ env.DISTRO_ID }}"  -F "package[package_file]=@horizon-eda-upstream_${{ env.HORIZON_VERSION }}-${{ env.HORIZON_PKG_VERSION }}_amd64.deb"
-#        curl -X POST https://${{ secrets.PACKAGECLOUD_API_TOKEN }}:@packagecloud.io/api/v1//repos/horizon-eda/horizon-eda/packages.json  -F "package[distro_version_id]=${{ env.DISTRO_ID }}"  -F "package[package_file]=@$(echo horizon-eda-upstream-dbgsym_${{ env.HORIZON_VERSION }}-${{ env.HORIZON_PKG_VERSION }}_amd64.*deb)"
+        sed -i 's/Codename:.*/Codename: ${{ matrix.os.release }}/' repo/conf/distributions
+        cd repo
+        reprepro includedeb ${{ matrix.os.release }} ./*.*deb
+        find
+        RSYNC_PASSWORD=${{ secrets.RSYNC_PASSWORD }} rsync -avz --stats --exclude=db --exclude=conf --delete-after ./  rsync://horizon-eda@mirror-1.server.selfnet.de/horizon-eda/${{ matrix.os.distro }}-${{ matrix.os.release }}/
