update ubuntu releases

--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -30,9 +30,9 @@ jobs:
           - distro: ubuntu
             release: jammy
           - distro: ubuntu
-            release: mantic
-          - distro: ubuntu
             release: noble
+          - distro: ubuntu
+            release: oracular
     runs-on: ubuntu-latest
     container: ${{ matrix.os.distro }}:${{ matrix.os.release }}
     steps:
@@ -57,10 +57,10 @@ jobs:
       run: apt-get install -y git build-essential libsqlite3-dev util-linux librsvg2-dev libcairomm-1.0-dev libepoxy-dev libgtkmm-3.0-dev uuid-dev libzmq5 libzmq3-dev libglm-dev libgit2-dev libcurl4-gnutls-dev libpodofo-dev python3 libarchive-dev libspnav-dev git libdxflib-dev
     - name: Install opencascade
       run: apt-get install liboce-ocaf-dev -y
-      if: ${{ matrix.os.release != 'noble' }}
+      if: ${{ matrix.os.release != 'noble' && matrix.os.release != 'oracular' }}
     - name: Install opencascade
       run: apt-get install libocct-ocaf-dev libocct-data-exchange-dev -y
-      if: ${{ matrix.os.release == 'noble' }}
+      if: ${{ matrix.os.release == 'noble' || matrix.os.release == 'oracular' }}
     - name: download tarball
       run: wget https://github.com/horizon-eda/horizon/archive/v${HORIZON_VERSION}.tar.gz -O horizon-eda-upstream_${HORIZON_VERSION}.orig.tar.gz
 
@@ -72,7 +72,7 @@ jobs:
 
     - name: patch debian/control opencascade package names
       run: sed -i "s/liboce-ocaf-dev,/libocct-ocaf-dev,\\n               libocct-data-exchange-dev,/" horizon-eda-upstream-${HORIZON_VERSION}/debian/control 
-      if: ${{ matrix.os.release == 'noble' }}
+      if: ${{ matrix.os.release == 'noble' || matrix.os.release == 'oracular' }}
 
     - name: run debuild
       run: debuild -uc -us
