--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -8,7 +8,7 @@ on:
     branches: [ master ]
 
 env:
-  HORIZON_VERSION: 2.5.0
+  HORIZON_VERSION: 2.6.0
   HORIZON_PKG_VERSION: 1
   DEBIAN_FRONTEND: noninteractive
   LANG: en_US.UTF-8
@@ -22,21 +22,17 @@ jobs:
       matrix:
         os: 
           - distro: debian
-            release: buster
-          - distro: debian
             release: bullseye
           - distro: debian
             release: bookworm
-          - distro: ubuntu
-            release: bionic
           - distro: ubuntu
             release: focal
           - distro: ubuntu
             release: jammy
           - distro: ubuntu
-            release: kinetic
+            release: noble
           - distro: ubuntu
-            release: lunar
+            release: oracular
     runs-on: ubuntu-latest
     container: ${{ matrix.os.distro }}:${{ matrix.os.release }}
     steps:
@@ -52,16 +48,19 @@ jobs:
         echo "${{ env.LANG }} UTF-8" > /etc/locale.gen
         locale-gen
     - name: install build utils
-      run: apt-get install -y devscripts build-essential lintian wget debhelper curl jq reprepro gnupg rsync
+      run: apt-get install -y devscripts build-essential lintian wget debhelper curl jq reprepro gnupg rsync meson cmake
     - name: import gpg key
       run: |
         echo "${{ secrets.GPG_KEY}}" | gpg --import
         gpg --list-keys
     - name: install dependencies
-      run: apt-get install -y git build-essential libsqlite3-dev util-linux librsvg2-dev libcairomm-1.0-dev libepoxy-dev libgtkmm-3.0-dev uuid-dev libzmq5 libzmq3-dev libglm-dev libgit2-dev libcurl4-gnutls-dev liboce-ocaf-dev libpodofo-dev python3 libarchive-dev libspnav-dev git libdxflib-dev
-    - name: install gcc 8
-      if: ${{ matrix.os.release == 'bionic' }}
-      run: apt-get install -y g++-8
+      run: apt-get install -y git build-essential libsqlite3-dev util-linux librsvg2-dev libcairomm-1.0-dev libepoxy-dev libgtkmm-3.0-dev uuid-dev libzmq5 libzmq3-dev libglm-dev libgit2-dev libcurl4-gnutls-dev libpodofo-dev python3 libarchive-dev libspnav-dev git libdxflib-dev
+    - name: Install opencascade
+      run: apt-get install liboce-ocaf-dev -y
+      if: ${{ matrix.os.release != 'noble' && matrix.os.release != 'oracular' }}
+    - name: Install opencascade
+      run: apt-get install libocct-ocaf-dev libocct-data-exchange-dev -y
+      if: ${{ matrix.os.release == 'noble' || matrix.os.release == 'oracular' }}
     - name: download tarball
       run: wget https://github.com/horizon-eda/horizon/archive/v${HORIZON_VERSION}.tar.gz -O horizon-eda-upstream_${HORIZON_VERSION}.orig.tar.gz
 
@@ -71,11 +70,9 @@ jobs:
         mv horizon-${HORIZON_VERSION} horizon-eda-upstream-${HORIZON_VERSION}
         cp -r debian horizon-eda-upstream-${HORIZON_VERSION}
 
-    - name: patch debian/rules to use gcc 8
-      if: ${{ matrix.os.release == 'bionic' }}
-      run: |
-        sed -i '/export CC/s/#//g' horizon-eda-upstream-${HORIZON_VERSION}/debian/rules
-        sed -i '/export CXX/s/#//g' horizon-eda-upstream-${HORIZON_VERSION}/debian/rules
+    - name: patch debian/control opencascade package names
+      run: sed -i "s/liboce-ocaf-dev,/libocct-ocaf-dev,\\n               libocct-data-exchange-dev,/" horizon-eda-upstream-${HORIZON_VERSION}/debian/control 
+      if: ${{ matrix.os.release == 'noble' || matrix.os.release == 'oracular' }}
 
     - name: run debuild
       run: debuild -uc -us
@@ -84,12 +81,12 @@ jobs:
     - name: list files
       run: ls
     - name: upload debian packages
-      uses: actions/upload-artifact@v2-preview
+      uses: actions/upload-artifact@v4
       with:
         name: packages-${{ matrix.os.distro }}-${{ matrix.os.release }}
         path: ./*.*deb
     - name: upload debian source files
-      uses: actions/upload-artifact@v2-preview
+      uses: actions/upload-artifact@v4
       with:
         name: source-packages-${{ matrix.os.distro }}-${{ matrix.os.release }}
         path: |
